Web Inspector: Editing local storage keys/values starts with truncated strings https://bugs.webkit.org/show_bug.cgi?id=169896
Reviewed by Brian Burg.

* UserInterface/Views/DataGrid.css:
(.data-grid td.editing > div):
* UserInterface/Views/DataGrid.js:
(WebInspector.DataGrid.prototype._editingCancelled):
div.cell-content is removed because the <td> itself is contenteditable (using -webkit-user-modify:read-write-plaintext-only),
not the inner div.cell-content. Re-create div.cell-content after commiting (by pressing Enter) or canceling (by pressing Esc)
since it may get removed while editing.


Canonical link: https://commits.webkit.org/186934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214308 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DataGrid.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DataGrid.css
@@ -204,6 +204,11 @@ body[dir=rtl] .data-grid:matches(:focus, .force-focus) tr.selected td:not(:last-
     overflow: hidden;
 }
 
+/* FIXME: Remove this once <https://webkit.org/b/169972> is fixed. */
+.data-grid td.editing > div {
+    text-overflow: clip;
+}
+
 .data-grid .centered div {
     text-align: center;
 }
